syntax = "proto3";

package proto;

option go_package = "github.com/akbarshoh/microOLX/userproto";

service UserService {
  rpc Log(User) returns(Response) {}
  rpc Payment(payRequest) returns(Response) {}
  rpc UserList(Admin) returns(Users) {}
  rpc LogAdmin(Admin) returns(Response) {}
}

message Admin{
  int32 id = 1;
  string password = 2;
}

message Users{
  repeated User List = 1;
}

message payRequest{
  int32 id = 1;
  int32 order_id = 2;
  int32 price = 3;
}

message User{
  int32 id = 1;
  string username = 2;
  int32 budget = 3;
}

message Response{
  string OK = 1;
}